# stalwart-panel

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: email_service.rs  error.rs  headers.rs  main.rs
backend/src/api/: groups.rs  mod.rs  user.rs
backend/src/api/accounts/: getters.rs  mod.rs  setters.rs
backend/src/api/emails/: mod.rs
backend/src/auth/: middleware.rs  mod.rs  password_reset.rs  permissions.rs  session.rs
backend/src/frontend/: api.rs
entities/: Cargo.toml
entities/src/: lib.rs
entities/src/account/: database_helper.rs  full_user.rs  mod.rs  panel_user.rs
entities/src/emails/: database_helper.rs  emails_type.rs  mod.rs
entities/src/groups/: mod.rs  permissions.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
panel-frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
panel-frontend/.storybook/: main.ts
panel-frontend/src/: App.vue  env.d.ts  http.ts  main.ts
panel-frontend/src/assets/styles/: form.scss  main.scss  tabs.scss  variables.scss
panel-frontend/src/components/: SideNavBar.vue  Spinner.vue
panel-frontend/src/components/accounts/: AccountList.vue  AccountsListGrid.vue  AccountsListTable.vue  EmailsList.vue
panel-frontend/src/components/accounts/admin/: Actions.vue  GeneralAccountSettings.vue
panel-frontend/src/components/form/: CheckBox.vue  Checkbox.vue  DropDownOptions.vue  DropDownOptionsInner.vue  FormGroup.vue  FormTypes.ts  Number.vue  Password.vue  SubmitButton.stories.ts  SubmitButton.vue  Switch.stories.ts  Switch.vue  TextArea.vue  TextInput.vue
panel-frontend/src/components/login/: LoginForm.vue  LoginResponse.vue
panel-frontend/src/components/spinner/: README.md  Spinner.vue
panel-frontend/src/components/tabs/: Tab.vue  TabElement.vue  Tabs.vue  types.ts
panel-frontend/src/router/: index.ts
panel-frontend/src/stores/: adminData.ts  session.ts
panel-frontend/src/types/: emails.ts  groups.ts  other.ts  user.ts
panel-frontend/src/views/: HomeView.vue  Login.vue  LoginView.vue
panel-frontend/src/views/accounts/: Accounts.vue  NewAccount.vue  ViewAccount.vue
setup-tool/: Cargo.toml  README.md
setup-tool/src/: ask_questions.rs  config_updater.rs  database_importer.rs  main.rs
test_data/: stalwart-config.toml
test_tool/: Cargo.toml
test_tool/src/: main.rs  random_users.rs
utils/: Cargo.toml
utils/src/: config.rs  duration_serde.rs  lib.rs  password.rs  stalwart_config.rs
utils/src/database/: email_address.rs  mod.rs  optional_email.rs  password.rs
utils/src/stalwart_config/: mod.rs  sql.rs
utils/src/stalwart_manager/: app_connector.rs  mod.rs
