[workspace]
members = [
    "utils",
    "entities",
    "migration",
    "setup-tool",
"backend"]
exclude = ["test_tool"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1" ,features = ["derive"]}
serde_json = "1"
chrono = { version = "0.4",features = ["serde"] }

rand = "0.8"
sea-orm = "0.12"
sqlx = "0.7"
strum = { version = "0.25", features = ["derive"] }
