[workspace]
members = ["utils", "entities", "migration", "setup-tool", "backend"]
exclude = ["test_tool"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
homepage = "https://github.com/wyatt-herkamp/stalwart-panel"
repository = "https://github.com/wyatt-herkamp/stalwart-panel"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = "1.33"
rand = "0.8"
sea-orm = "0.12"
sqlx = "0.7"
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"
toml_edit = "0.21"
thiserror = "1"
log = "0.4"
human-panic = "1"
[profile.dev.package.tokio]
opt-level = 3
