[package]
name = "stalwart-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = { version = "4.3",features = ["rustls"] }
actix-rt = "2"
actix-service = "2"
actix-files = "0.6"
actix-cors = "0.6"
rustls = "0.20.8"
rustls-pemfile = "1"
# Tokio
tokio = { version = "1", features = ["full"] }
# Database
entities = { path = "../entities", default-features = false, features = ["actix"] }
sea-orm = { version = "0.11", features = ["runtime-actix-rustls","macros","sqlx-mysql","sqlx-postgres"] }
sqlx = "0.6"
# Utils
argon2 = "0.5.0"
thiserror = "1"
this_actix_error = { git = "https://github.com/wyatt-herkamp/this_actix_errors.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utils = { path = "../utils" }
parking_lot = "0.12"
# CLI
clap = { version = "4",features = ["derive"] }
either = "1"
chrono = "0.4"
redb = "1"
futures-util = "0.3"

tracing = "0.1"
toml = "0.7"
rand = "0"
# Web API
typeshare = "1"
utoipa = { version="3", features = ["actix_extras"] }
utoipa-swagger-ui = { version="3", features = ["actix-web"] }