[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace=true ,features = ["derive"] }
sea-orm = { workspace=true, features = ["macros","sqlx-mysql","sqlx-postgres"] }
sqlx = { workspace=true}
serde_json = {workspace=true}
ahash = "0.8"
rand = {workspace=true,features=["std_rng"]}
strum = {workspace=true}
strum_macros =  {workspace=true}
typeshare = "1"
chrono = "0.4"
utils = { path = "../utils", features = ["sea-orm"] }

[dev-dependencies]
sea-orm = { workspace=true, features = ["macros","sqlx-mysql","sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
[features]
default =["cli"]
cli = ["sea-orm/runtime-tokio-rustls"]
actix = ["sea-orm/runtime-actix-rustls"]