[package]
name = "entities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace=true, features = ["macros","sqlx-mysql","sqlx-postgres"] }
sqlx = { workspace=true}
serde.workspace = true
serde_json.workspace = true
ahash = "0.8"
rand = {workspace=true,features=["std_rng"]}
strum = {workspace=true}

typeshare = "1"
chrono = "0.4"
utils = { path = "../utils", features = ["sea-orm"] }

[dev-dependencies]
sea-orm = { workspace=true, features = ["macros","sqlx-mysql","sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
[features]
default =["cli"]
cli = ["sea-orm/runtime-tokio-rustls"]
actix = ["sea-orm/runtime-actix-rustls"]