[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
entities = { path = "../entities" }
[dependencies.sea-orm-migration]
version = "0.12.0-rc.5"
features = [
    "runtime-tokio-rustls"
]

[dev-dependencies]
