[package]
name = "migration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
entities = { path = "../entities" }
[dependencies.sea-orm-migration]
version = "0.12"
features = ["runtime-tokio-rustls"]

[dev-dependencies]
