[package]
name = "setup-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.7.4"
toml_edit = "0.19"
serde = { version = "1.0", features = ["derive"] }
entities = {path = "../entities"}
migration = {path = "../migration"}
utils = {path = "../utils"}
sea-orm = { version = "0.11", features = ["runtime-tokio-rustls","macros","sqlx-mysql","sqlx-postgres"] }
sqlx = { version = "0.6", features = ["sqlite","mysql","postgres", "any"] }

clap = { version = "4",features = ["derive"] }
log = "0.4"


rand = "0.8.5"
argon2 = "0.5.0"