[package]
name = "setup-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace=true, features = ["full"] }
toml = {workspace=true}
toml_edit = "0.20.4"
serde={workspace=true}
entities = {path = "../entities"}
migration = {path = "../migration"}
utils = {path = "../utils", features = ["sea-orm"]}
sea-orm = { workspace=true, features = ["runtime-tokio-rustls","macros","sqlx-mysql","sqlx-postgres"] }
sqlx = { workspace=true, features = ["sqlite","mysql","postgres", "any"] }
inquire = "0.6"
clap = { version = "4",features = ["derive"] }
log = {workspace=true}
thiserror.workspace = true
