[package]
name = "setup-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Converts the default stalwart setup to use stalwart panel"
homepage.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
toml_edit = "0.21.0"
serde = { workspace = true }
entities = { path = "../entities" }
migration = { path = "../migration" }
utils = { path = "../utils", features = ["sea-orm"] }
sea-orm = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlx-mysql",
    "sqlx-postgres",
] }
sqlx = { workspace = true, features = ["sqlite", "mysql", "postgres", "any"] }
inquire = "0.7"
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
thiserror.workspace = true
human-panic.workspace = true
