[package]
name = "test_tool"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/wyatt-herkamp/stalwart-panel"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
description = "Generates Test Data in the Database."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
tokio = { version = "1", features = ["full"] }
entities = { path = "../entities" }
utils = { path = "../utils", features = ["sea-orm"] }
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlx-mysql",
    "sqlx-postgres",
] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
