[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.7"
toml_edit = "0.19"

argon2 = "0.5"
sha-crypt = "0.5"
rand = "0.8.5"
strum = "0"
strum_macros = "0"
log = "0.4"
once_cell = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
sea-orm = {workspace= true, optional = true}

[dependencies.lettre]
version = "0"
default-features = false
optional = true
