[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace=true }
toml = {workspace=true}
toml_edit = {workspace=true}
chrono = {workspace=true}
argon2 = "0.5"
sha-crypt = "0.5"
rand = {workspace=true}
strum = {workspace = true}
log = {workspace=true}
once_cell = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
thiserror ={workspace=true}
sea-orm = {workspace= true, optional = true}

[dependencies.lettre]
version = "0.11.1"
default-features = false
optional = true
